; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_database.c_task_database_chd_get_serial.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_database.c_task_database_chd_get_serial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETRO_VFS_FILE_ACCESS_READ = common dso_local global i32 0, align 4
@RETRO_VFS_FILE_ACCESS_HINT_NONE = common dso_local global i32 0, align 4
@CHDSTREAM_TRACK_FIRST_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @task_database_chd_get_serial to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @task_database_chd_get_serial(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @RETRO_VFS_FILE_ACCESS_READ, align 4
  %10 = load i32, i32* @RETRO_VFS_FILE_ACCESS_HINT_NONE, align 4
  %11 = load i32, i32* @CHDSTREAM_TRACK_FIRST_DATA, align 4
  %12 = call i32* @intfstream_open_chd_track(i8* %8, i32 %9, i32 %10, i32 %11)
  store i32* %12, i32** %7, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

16:                                               ; preds = %2
  %17 = load i32*, i32** %7, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @intfstream_get_serial(i32* %17, i8* %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @intfstream_close(i32* %20)
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @free(i32* %22)
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %16, %15
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32* @intfstream_open_chd_track(i8*, i32, i32, i32) #1

declare dso_local i32 @intfstream_get_serial(i32*, i8*) #1

declare dso_local i32 @intfstream_close(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
